--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
-name: Run snake
+name: Generate Datas
 
 on:
   schedule: # execute every 12 hours
-    - cron: "0 */5 * * *"
+    - cron: "* */5 * * *"
   workflow_dispatch:
 
 jobs:
